--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A streaming upload tool for Amazon S3",
   "main": "index.js",
   "dependencies": {
-    "backoff": "~2.3.0",
+    "backoff": "^2.5.0",
     "crypto": "0.0.3",
-    "event-stream": "3.0.16",
-    "knox": "~0.8.3",
+    "event-stream": "^3.3.4",
+    "knox": "^0.9.2",
     "level-write-stream": "^1.0.0",
-    "mime": "~1.2.9",
-    "once": "~1.1.1",
-    "queue-async": "~1.0.4",
+    "mime": "^1.3.4",
+    "once": "^1.4.0",
+    "queue-async": "^1.2.1",
     "xtend": "~4.0.0"
   },
   "peerDependencies": {
